Add CMake/git dependency example

--- a/guidelines.org
+++ b/guidelines.org
@@ -24,6 +24,30 @@
 ***** [[https://www.youtube.com/watch?v=eC9-iRN2b04][CppCon 2017: Mathieu Ropert “Using Modern CMake Patterns to Enforce a Good Modular Design”]]
 ***** [[https://www.youtube.com/watch?v=bsXLMQ6WgIk][C++Now 2017: Daniel Pfeifer “Effective CMake"]]
 ***** [[https://foonathan.net/blog/2016/07/07/cmake-dependency-handling.html][Dependency management CMake/Git]]
+Example: 
+#+BEGIN_SRC cmake
+find_package(ZeroMQ QUIET)
+
+if (ZeroMQ_FOUND)
+    add_library(zmq INTERFACE)
+    target_include_directories(zmq INTERFACE ${ZeroMQ_INCLUDE_DIR})
+    target_link_libraries(zmq INTERFACE ${ZeroMQ_LIBRARY})
+else()
+    message("'zmq' not installed on the system, building from source...")
+
+    execute_process(COMMAND git submodule update --init --remote -- ext/libzmq
+        WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
+
+    set(ZMQ_BUILD_TESTS OFF CACHE BOOL "disable tests" FORCE)
+    set(WITH_PERF_TOOL OFF CACHE BOOL "disable perf-tools" FORCE)
+    add_subdirectory(${CMAKE_SOURCE_DIR}/ext/libzmq)
+    set(ZMQ_INCLUDE_DIR ${CMAKE_SOURCE_DIR}/ext/libzmq/include)
+
+    # ZeroMQ names their target libzmq, which is inconsistent => create a ghost dependency
+    add_library(zmq INTERFACE)
+    target_link_libraries(zmq INTERFACE libzmq)
+endif()
+#+END_SRC
 ***** https://foonathan.net/blog/2018/10/17/cmake-warnings.html
 **** Dynamically linked dependencies
 Three places that a binary looks for shared dependencies
@@ -83,7 +107,7 @@ You can build the bindings using CMake.
 set(BINDING_NAME "py_your_project")
 set(BINDING_SOURCES "src/module.cpp")
 
-set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "your_project")
+set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}")
 
 pybind11_add_module(${BINDING_NAME} ${BINDING_SOURCES})
 
